app/deployment-yelb-appserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yelb-appserver
  namespace: yelb
spec:
  selector:
    matchLabels:
      app: yelb-appserver
  replicas: 2
  template:
    metadata:
      labels:
        app: yelb-appserver
        tier: middletier
    spec:
      containers:
      - name: yelb-appserver
        image: mreferre/yelb-appserver:0.5
        livenessProbe:
          httpGet:
            path: /api/getstats
            port: 4567
        readinessProbe:
          httpGet:
            path: /api/getstats
            port: 4567
        resources:
          requests:
            cpu: 500m
            memory: 50Mi
          limits:
            cpu: 500m
            memory: 50Mi
