app/ingress-yelb-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx-ingress
  name: yelb-ui
  namespace: yelb
spec:
  rules:
  - host: yelb.kepler.hillghost.com
    http:
      paths:
      - backend:
          service:
            name: yelb-ui
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - yelb.kepler.hillghost.com
    secretName: yelb-ui-tls
